<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FeedbackForm">




    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/InstTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/InstTitle"
                android:textColor="@color/colorAccent"
                android:textFontWeight="2"
                android:textSize="24sp"
                android:textStyle="bold"
                android:typeface="normal"
                app:fontFamily="serif" />

            <TextView
                android:id="@+id/Instructions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="7dp"
                android:text="@string/Instructions"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold|italic" />
            <TextView
                android:id="@+id/ratingText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rating"
                android:textStyle="bold" />
            <RatingBar
                android:id="@+id/ratingBarForm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="3dp"
                android:scaleX="0.8"
                android:scaleY="0.8"
                android:progressTint="@color/stars"/>
            <TextView
                android:id="@+id/Q1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Question1"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/Q1Answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="" />

            <TextView
                android:id="@+id/Q2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Question2"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/semester"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@android:drawable/btn_dropdown"
                    android:spinnerMode="dropdown" />

                <Spinner
                    android:id="@+id/year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@android:drawable/btn_dropdown"
                    android:spinnerMode="dropdown" />

            </LinearLayout>

            <TextView
                android:id="@+id/Q3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Question3"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/Q3Answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="" />

            <TextView
                android:id="@+id/Q4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Question4"
                android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/quizzesAnswer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="" />


        </LinearLayout>

            <TextView
                android:id="@+id/Q5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Question5"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/midtermInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown" />

            <TextView
                android:id="@+id/Q6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Question6"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/finalInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown" />
            <TextView
                android:id="@+id/Q8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Question8"
                android:textStyle="bold" />
            <EditText
                android:id="@+id/comments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/submitButton"
                    android:layout_width="250px"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:background="@color/colorPrimary"
                    android:onClick="feedbackSubmit"
                    android:enabled="false"
                    android:text="@string/welcomepagesubmit" />

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>